# bazel-typescript-showcase

frontend/project-a/: BUILD.bazel
frontend/project-b/: BUILD.bazel
