load("@npm//@bazel/typescript:index.bzl", "ts_project")

ts_project(
    name = "tsconfig",
    srcs = ["index.ts"],
    composite = True,
    extends = "//frontend/typescript:tsconfig.dts.json",
    tsconfig = ":tsconfig.json",
    visibility = ["//visibility:public"],
    supports_workers = True,
    deps = [
        "//frontend/project-b:tsconfig",
    ],
)
